Se implementa el manejo de sesiones para crear, ver y eliminar personas

--- a/templates/igle/sidebar-menu.html
+++ b/templates/igle/sidebar-menu.html
@@ -1,5 +1,22 @@
 <div class="page-header">
-	<h1>&nbsp;<small></small></h1>
+	<h1>	
+		
+		{% if user.is_authenticated %}
+		<div class="btn-group">
+			<a aria-expanded="false" href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+				{{ user.username }}
+				<span class="caret"></span>
+			</a>
+			<ul class="dropdown-menu">
+				<li><a href="#">Perfil</a></li>
+				<li><a href="#">Cambiar contraseña</a></li>
+				<li class="divider"></li>
+				<li><a href="{% url 'logout' %}">Cerrar sesión</a></li>
+			</ul>
+		</div>
+		{% endif %}
+		<small></small>
+	</h1>
 </div>
 
 <ul class="nav nav-pills nav-stacked">
