--- a/personas/templates/personas/persona_view_form.html
+++ b/personas/templates/personas/persona_view_form.html
@@ -31,7 +31,7 @@
 	<div class="row">
 		<div class="col-md-12">
 
-			<div class="modal fade" id="MyModal" tabindex="-1" role="dialog" aria-labelledby="Pantalla de confirmación para eliminar personas">
+			<div class="modal fade" id="MyModal" tabindex="-1" role="dialog">
 				<div class="modal-dialog" role="document">
 
 					<div class="modal-content">
@@ -59,7 +59,7 @@
 	<div class="row">
 
 		<div class="col-md-3">
-			<div href="#" class="thumbnail">
+			<div class="thumbnail">
 
 				<img alt="..." src="{% static "igle/img/profile/profile.png" %}">
 
