--- a/templates/igle/base.html
+++ b/templates/igle/base.html
@@ -14,8 +14,8 @@
 	<meta name="author" content="">
 
 	<link rel="icon" href="../../favicon.ico">
-	<link rel="stylesheet" href="{% static "igle/css/spacelab.bootstrap.min.css" %}">
-	<link rel="stylesheet" href="{% static "igle/css/bootstrap-datetimepicker.min.css" %}">
+	<link rel="stylesheet" href="{% static "igle/css/bootstrap-spacelab.css" %}">
+	<link rel="stylesheet" href="{% static "igle/css/bootstrap-datetimepicker.css" %}">
 
 	<title>{% block title %} Igle {% endblock %}</title>
 
@@ -68,17 +68,17 @@
 
 
 	<script src="{% static "igle/js/lib/jquery.js" %}" type="text/javascript"></script>
-	<script src="{% static "igle/js/lib/jquery.validate.min.js" %}" type="text/javascript"></script>
-	<script src="{% static "igle/js/lib/jquery.validate.messages_es.min.js" %}" type="text/javascript"></script>
+	<script src="{% static "igle/js/lib/jquery.validate.js" %}" type="text/javascript"></script>
+	<script src="{% static "igle/js/lib/jquery.validate.messages_es.js" %}" type="text/javascript"></script>
 	<script src="{% static "igle/js/lib/underscore.js" %}" type="text/javascript"></script>
 	<script src="{% static "igle/js/lib/backbone.js" %}" type="text/javascript"></script>
 	<!--<script src="{% static "igle/js/lib/backbone.localstorage.js" %}" type="text/javascript"></script>-->  
-	<script src="{% static "igle/js/lib/moment.min.js" %}" type="text/javascript"></script>
+	<script src="{% static "igle/js/lib/moment.js" %}" type="text/javascript"></script>
 	<script src="{% static "igle/js/lib/moment-locale-es.js" %}" type="text/javascript"></script>
 
 	<!-- Minified Bootstrap JavaScript -->
-	<script src="{% static "igle/js/lib/bootstrap.min.js" %}" type="text/javascript"></script>
-	<script src="{% static "igle/js/lib/bootstrap-datetimepicker.min.js" %}" type="text/javascript"></script>
+	<script src="{% static "igle/js/lib/bootstrap.js" %}" type="text/javascript"></script>
+	<script src="{% static "igle/js/lib/bootstrap-datetimepicker.js" %}" type="text/javascript"></script>
 
 	{% block script %}{% endblock %}
 
