--- a/personas/templates/personas/persona_view_form.html
+++ b/personas/templates/personas/persona_view_form.html
@@ -1,8 +1,8 @@
-{% extends "igle/base.html" %}
+{% extends "personas/base.html" %}
 {% load staticfiles %}
 {% load i18n %}
 
-{% block body %}
+{% block content %}
 
 <section id="el">
 
@@ -149,6 +149,6 @@
 {% endblock %}
 
 {% block script %}
-<script src="{% static "personas/js/views.js" %}" type="text/javascript"></script>
-<script src="{% static "personas/js/detail.js" %}" type="text/javascript"></script>
+<script src="{% static 'personas/js/views.js' %}" type="text/javascript"></script>
+<script src="{% static 'personas/js/detail.js' %}" type="text/javascript"></script>
 {% endblock %}
