--- a/templates/igle/login.html
+++ b/templates/igle/login.html
@@ -4,7 +4,7 @@
 		
 <div class="row">
 	
-<div class="col-md-8 col-md-offset-2">
+<div class="col-md-4 col-md-offset-4">
 		
 	<div class="page-header">
 	  <h1>Inciar sesión <small></small></h1>
@@ -20,7 +20,7 @@
 	<div class="panel panel-default">
 	  <div class="panel-body">
 
-			<form action='.' method='post'>
+			<form action="{% url 'login' %}" method='post'>
 				
 				<div class="form-group">
 					<label>Usuario</label>
@@ -53,12 +53,8 @@
 				{% else %}
 				<input type="hidden" name="next" value="{% url 'home' %}">
 				{% endif %}
-
-<<<<<<< HEAD
-			<form>
-=======
+				
 		  </form>
->>>>>>> Se ajustan las plantillas al estandar html, utilizando el validador de la w3c
 
 	  </div>
 	</div>
