--- a/templates/igle/menu.html
+++ b/templates/igle/menu.html
@@ -1,20 +1,55 @@
-<nav class="navbar navbar-default">
-  <div class="container">
-
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Sistema de informacion</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      
-      <!-- App Links -->
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="{% url 'home' %}"> Inicio <span class="sr-only">(current)</span></a></li>
-        <li class=""><a href="{% url 'personas:list_view' %}"> Personas <span class="sr-only">Módulo de personas</span></a></li>
-      </ul>
-
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container -->
+<!-- Navigation -->
+<nav class="navbar navbar-default" role="navigation">
+	<div class="container">
+		<!-- Brand and toggle get grouped for better mobile display -->
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="{% url 'home' %}">Start Bootstrap</a>
+		</div>
+		<!-- Collect the nav links, forms, and other content for toggling -->
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="nav navbar-nav">
+				<li>
+					<a href="{% url 'personas:list_view' %}">Personas</a>
+				</li>
+				<li class="disabled">
+					<a href="{% url 'personas:list_view' %}">Plantillas</a>
+				</li>
+				<li>
+					<a href="#">Contacto</a>
+				</li>
+			</ul>
+			
+			<ul class="nav navbar-nav navbar-right">
+				
+				{% if user.is_authenticated %}
+				
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> {{ user.username }} <span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a href="#">Perfil</a></li>
+						<li><a href="#">Cambiar contraseña</a></li>
+						<li class="divider"></li>
+						<li><a href="{% url 'logout' %}">Cerrar sesión</a></li>
+					</ul>
+				</li>
+				
+				{% else %}
+				<!--<li>
+					<a class="btn btn-default navbar-btn" href="{% url 'login' %}">Iniciar sesión</a>
+				</li>-->
+				<p class="navbar-text navbar-right"><a href="{% url 'login' %}" class="navbar-link">Iniciar sesión</a></p>
+				{% endif %}
+			</ul>
+			
+			
+		</div>
+		<!-- /.navbar-collapse -->
+	</div>
+	<!-- /.container -->
 </nav>
