--- a/templates/igle/base.html
+++ b/templates/igle/base.html
@@ -1,6 +1,5 @@
 {% load staticfiles %}
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -10,9 +9,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="">
 	<meta name="author" content="">
-
+	
 	<title>{% block title %} Igle {% endblock %}</title>
-
+	
 	<!--<link rel="icon" href="../../favicon.ico">-->
 	<link rel="stylesheet" href="{% static 'igle/css/bootstrap-spacelab.css' %}">
 	<link rel="stylesheet" href="{% static 'igle/css/bootstrap-datetimepicker.css' %}">
@@ -78,7 +77,7 @@
 	<script src="{% static 'igle/js/lib/bootstrap-datetimepicker.js' %}" type="text/javascript"></script>
 
 	{% block script %}{% endblock %}
-
+	
 {% endblock %}
 
 </body>
