se agrega el planificador al menu principal y se reorganiza el template asociado

--- a/templates/igle/planificador.html
+++ b/templates/igle/planificador.html
@@ -6,17 +6,27 @@
 	
 	<div class="row">
 
-		<div class="col-md-12">
+		<div class="col-md-3">
 
-			<div class="page-header">
-			  <h1>Planificador año {{ anio }} <small></small></h1>
+			<div class="panel panel-primary">
+
+				<div class="panel-heading">
+					<h1 class="panel-title">Planificador {{ anio }} <small></small></h1>
+				</div>
+
+				<div class="panel-body">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id est velit. Donec in ex bibendum, rhoncus massa ac, commodo sapien. Duis elementum, velit ac imperdiet ultricies, nunc libero porta felis, et pulvinar tellus urna a magna. Nunc at nisl tincidunt, fermentum nisl eu, elementum leo. Donec vulputate blandit aliquet. Donec ipsum justo, varius vitae nisi tristique, faucibus vulputate nunc. Donec leo massa, suscipit id nisl non, eleifend ornare dolor. Sed et ipsum ut arcu rhoncus tempus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent tempus eros ut lacinia feugiat.
+				</div>
+
 			</div>
-			
-			<br>
+
+		</div>
+
+		<div class="col-md-9">
 
 			<div class="text-center">
 
-				<iframe src="https://calendar.google.com/calendar/embed?title=Veinte%20de%20Julio%2C%20Distrito%2019%2C%20Iglesia%20Pentecostal%20Unida%20de%20Colombia&amp;height=600&amp;wkst=1&amp;hl=es_419&amp;bgcolor=%23ffffff&amp;src=iglesiasoft%40gmail.com&amp;color=%231B887A&amp;ctz=America%2FBogota" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+				<iframe src="https://calendar.google.com/calendar/embed?title=Veinte%20de%20Julio%2C%20Distrito%2019%2C%20Iglesia%20Pentecostal%20Unida%20de%20Colombia&amp;height=600&amp;wkst=1&amp;hl=es_419&amp;bgcolor=%23ffffff&amp;src=iglesiasoft%40gmail.com&amp;color=%231B887A&amp;ctz=America%2FBogota" style="border-width:0" width="800" height="500" frameborder="0" scrolling="no"></iframe>
 
 			</div>
 
