--- a/templates/igle/menu.html
+++ b/templates/igle/menu.html
@@ -16,15 +16,29 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
 			<ul class="nav navbar-nav">
+				
 				<li>
 					<a href="{% url 'personas:list_view' %}">Personas</a>
 				</li>
+				
 				<li class="disabled">
 					<a href="{% url 'personas:list_view' %}">Plantillas</a>
 				</li>
-				<li>
+
+				<li class="disabled">
 					<a href="#">Contacto</a>
 				</li>
+
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <span class="label label-warning">Planificador</span> <span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a href="{% url 'planificador:planner_view' anio=2016 %}">2016</a></li>
+						<li role="separator" class="divider"></li>
+						<li><a href="{% url 'planificador:planner_view' anio=2015 %}">2015</a></li>
+						<li><a href="{% url 'planificador:planner_view' anio=2014 %}">2014</a></li>
+					</ul>
+				</li>
+
 			</ul>
 			
 			{% include "xp/menu.html" %}
